--- a/project_receipt/receipt/templates/receipt/receipt_list.html
+++ b/project_receipt/receipt/templates/receipt/receipt_list.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
+<table>
 {% for object in object_list %}
-  {{ object }}
+  <tr><td>{{ object }}</td><td><a href="{% url 'receipt_update' object.pk %}">Edit</a></td></tr>
 {% endfor %}
+</table>
 
 </body>
 </html>
