Styling with w3css and refactoring

--- a/project_receipt/receipt/templates/receipt/company_detail.html
+++ b/project_receipt/receipt/templates/receipt/company_detail.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Company detail</title>
-</head>
-<body>
+{% extends 'common.html' %}
+
+{% block title %}Company detail{% endblock %}
+
+{% block body %}
 
 {{ company }}
 
-</body>
-</html>
+{% endblock %}
