--- a/project_receipt/receipt/templates/receipt/establishment_detail.html
+++ b/project_receipt/receipt/templates/receipt/establishment_detail.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Establishment detail</title>
-</head>
-<body>
+{% extends 'common.html' %}
+
+{% block title %}Establishment detail{% endblock %}
+
+{% block body %}
 
 {{ establishment }}
 
-</body>
-</html>
+ {% endblock %}
