--- a/project_receipt/receipt/templates/receipt/tag_detail.html
+++ b/project_receipt/receipt/templates/receipt/tag_detail.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Tag detail</title>
-</head>
-<body>
+{% extends 'common.html' %}
+
+{% block title %}Tag detail{% endblock %}
+
+{% block body %}
 
 {{ tag }}
 
-</body>
-</html>
+{% endblock %}}
