--- a/project_receipt/receipt/templates/receipt/tag_list.html
+++ b/project_receipt/receipt/templates/receipt/tag_list.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Tag list</title>
-</head>
-<body>
+{% extends 'common.html' %}
+
+{% block title %}Tag list{% endblock %}
+
+{% block body %}
 
 <table>
 {% for object in object_list %}
@@ -15,5 +13,4 @@
 {% endfor %}
 </table>
 
-</body>
-</html>
+{% endblock %}
