--- a/project_receipt/receipt/templates/receipt/establishment_detail.html
+++ b/project_receipt/receipt/templates/receipt/establishment_detail.html
@@ -4,7 +4,11 @@
 
 {% block body %}
 
-  {{ establishment }} <a href="{% url 'establishment_update' establishment.pk%}" class="w3-button w3-black w3-round-large">Edit</a>
+  <h2>Establishment: {{ establishment }}</h2>
+  <a href="{% url 'establishment_update' establishment.pk%}" class="w3-button w3-black w3-round-large">
+    Edit</a>
+  <a href="{% url 'establishment_add_receipt' establishment.pk%}" class="w3-button w3-black w3-round-large">
+    Add new receipt</a>
 
   <table>
     <tr>
