--- a/project_receipt/receipt/templates/receipt/company_list.html
+++ b/project_receipt/receipt/templates/receipt/company_list.html
@@ -4,7 +4,9 @@
 
 {% block body %}
 
-<a href="{% url 'company_create'%}"> Create new company</a>
+<a href="{% url 'company_create'%}" class="w3-button w3-black w3-round-xlarge">
+  Create new company
+</a>
 
 <table>
 {% for object in object_list %}
