Totals for Company, Establishment and Receipt

--- a/project_receipt/receipt/templates/receipt/company_detail.html
+++ b/project_receipt/receipt/templates/receipt/company_detail.html
@@ -23,4 +23,10 @@
 
   </table>
 
+  <table>
+    <tr>
+      <th>Total: </th><th>{{ company.get_total }}</th>
+    </tr>
+  </table>
+
 {% endblock %}
