--- a/project_receipt/receipt/templates/receipt/establishment_detail.html
+++ b/project_receipt/receipt/templates/receipt/establishment_detail.html
@@ -34,4 +34,10 @@
 
   </table>
 
+  <table>
+    <tr>
+      <th>Total: </th><th>{{ establishment.get_total }}</th>
+    </tr>
+  </table>
+
  {% endblock %}
