--- a/project_receipt/receipt/templates/receipt/receipt_list.html
+++ b/project_receipt/receipt/templates/receipt/receipt_list.html
@@ -8,6 +8,13 @@
 </a>
 
 <table>
+  <tr>
+    <th>Total: </th><th>{{ object_list.total }}</th>
+  </tr>
+</table>
+
+
+<table>
 
   <tr>
     <th>Amount</th>
