--- a/project_receipt/receipt/templates/pagination.html
+++ b/project_receipt/receipt/templates/pagination.html
@@ -5,9 +5,13 @@
       <a href="?page={{ page_obj.previous_page_number }}">previous</a>
     {% endif %}
 
-    <span class="current">
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-    </span>
+    {% for num in page_obj.paginator.page_range %}
+      {% ifequal num contacts.number %}
+        <span class="current"><b>{{ num }}</b></span>
+      {% else %}
+        <a href="?page={{ num }}"> {{ num }}</a>
+      {% endifequal %}
+    {% endfor %}
 
     {% if page_obj.has_next %}
       <a href="?page={{ page_obj.next_page_number }}">next</a>
