--- a/project_receipt/receipt/templates/pagination.html
+++ b/project_receipt/receipt/templates/pagination.html
@@ -1,21 +1,27 @@
-<div class="pagination">
-  <span class="step-links">
+<div class="w3-bar">
+
     {% if page_obj.has_previous %}
-      <a href="?page=1">&laquo; first</a>
-      <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+      <a class="w3-button" href="?page=1"><<</a>
+      <a class="w3-button" href="?page={{ page_obj.previous_page_number }}"><</a>
+    {% else %}
+      <button class="w3-button" disabled=""><<</button>
+      <button class="w3-button" disabled=""><</button>
     {% endif %}
 
     {% for num in page_obj.paginator.page_range %}
-      {% ifequal num contacts.number %}
-        <span class="current"><b>{{ num }}</b></span>
+      {% ifequal num page_obj.number %}
+        <span class="w3-button w3-grey"><b>{{ num }}</b></span>
       {% else %}
-        <a href="?page={{ num }}"> {{ num }}</a>
+        <a class="w3-button" href="?page={{ num }}"> {{ num }}</a>
       {% endifequal %}
     {% endfor %}
 
     {% if page_obj.has_next %}
-      <a href="?page={{ page_obj.next_page_number }}">next</a>
-      <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+      <a class="w3-button" href="?page={{ page_obj.next_page_number }}">></a>
+      <a class="w3-button" href="?page={{ page_obj.paginator.num_pages }}">>></a>
+    {% else %}
+      <button class="w3-button" disabled>></button>
+      <button class="w3-button" disabled>>></button>
     {% endif %}
-  </span>
+
 </div>
