Filtered companies by their names with text input.

--- a/project_receipt/receipt/templates/receipt/company_list.html
+++ b/project_receipt/receipt/templates/receipt/company_list.html
@@ -8,6 +8,12 @@
   Create new company
 </a>
 
+<form class="w3-container" method="get">
+  <label>Search by company name
+    <input class="w3-input w3-border" name="company_name" type="text">
+  </label>
+</form>
+
 <table>
 {% for object in object_list %}
   <tr>
