Working implementation with a custom tag

--- a/project_receipt/receipt/templates/receipt/company_list.html
+++ b/project_receipt/receipt/templates/receipt/company_list.html
@@ -10,7 +10,7 @@
 
 <form class="w3-container" method="get">
   <label>Search by company name
-    <input class="w3-input w3-border" name="company_name" type="text">
+    <input class="w3-input w3-border" name="company_name" type="text" value="{{ company_name_keyword }}">
   </label>
 </form>
 
