--- a/project_receipt/receipt/templates/pagination.html
+++ b/project_receipt/receipt/templates/pagination.html
@@ -1,10 +1,8 @@
-{% load get_url_update %}
-
 <div class="w3-bar">
 
     {% if page_obj.has_previous %}
-      <a class="w3-button" href="?{% param_replace page=1 %}"><<</a>
-      <a class="w3-button" href="?{% param_replace page=page_obj.previous_page_number %}"><</a>
+      <a class="w3-button" href="?page=1{{ search_params }}"><<</a>
+      <a class="w3-button" href="?page={{ page_obj.previous_page_number }}{{ search_params }}"><</a>
     {% else %}
       <button class="w3-button" disabled=""><<</button>
       <button class="w3-button" disabled=""><</button>
@@ -14,13 +12,13 @@
       {% ifequal num page_obj.number %}
         <span class="w3-button w3-grey"><b>{{ num }}</b></span>
       {% else %}
-        <a class="w3-button" href="?{% param_replace page=num %}"> {{ num }}</a>
+        <a class="w3-button" href="?page={{ num }}{{ search_params }}"> {{ num }}</a>
       {% endifequal %}
     {% endfor %}
 
     {% if page_obj.has_next %}
-      <a class="w3-button" href="?{% param_replace page=page_obj.next_page_number %}">></a>
-      <a class="w3-button" href="?{% param_replace page=page_obj.paginator.num_pages %}">>></a>
+      <a class="w3-button" href="?page={{ page_obj.next_page_number }}{{ search_params }}">></a>
+      <a class="w3-button" href="?page={{ page_obj.paginator.num_pages }}{{ search_params }}">>></a>
     {% else %}
       <button class="w3-button" disabled>></button>
       <button class="w3-button" disabled>>></button>
