Used django-filter plus replace url params tag to have paginated filtered list

--- a/project_receipt/receipt/templates/receipt/company_list.html
+++ b/project_receipt/receipt/templates/receipt/company_list.html
@@ -9,10 +9,7 @@
 </a>
 
 <form class="w3-container" method="get">
-  <label>Search by company name
-    <input class="w3-input w3-border" name="{{ company_name_key }}" type="text"
-           value="{{ company_name_keyword }}">
-  </label>
+  {{ filter.form }}
 </form>
 
 <table>
