--- a/project_receipt/receipt/templates/receipt/company_list.html
+++ b/project_receipt/receipt/templates/receipt/company_list.html
@@ -10,6 +10,7 @@
 
 <form class="w3-container" method="get">
   {{ filter.form }}
+  <button class="w3-button w3-black" type="submit">Search</button>
 </form>
 
 <table>
