--- a/project_receipt/receipt/templates/pagination.html
+++ b/project_receipt/receipt/templates/pagination.html
@@ -11,11 +11,11 @@
     {% endif %}
 
     {% for num in page_obj.paginator.page_range %}
-      {% ifequal num page_obj.number %}
+      {% if num == page_obj.number %}
         <span class="w3-button w3-grey"><b>{{ num }}</b></span>
       {% else %}
         <a class="w3-button" href="?{% param_replace page=num %}"> {{ num }}</a>
-      {% endifequal %}
+      {% endif %}
     {% endfor %}
 
     {% if page_obj.has_next %}
