--- a/project_receipt/receipt/templates/receipt/establishment_list.html
+++ b/project_receipt/receipt/templates/receipt/establishment_list.html
@@ -1,4 +1,4 @@
-{% extends 'common.html' %}
+{% extends 'receipt/common.html' %}
 
 {% block title %}Establishment list{% endblock %}
 
@@ -22,6 +22,6 @@
 {% endfor %}
 </table>
 
-{% include 'pagination.html' %}
+{% include 'receipt/pagination.html' %}
 
 {% endblock %}
